--- a/codingtest/implementation/*game_development.ipynb
+++ b/codingtest/implementation/*game_development.ipynb
@@ -23,9 +23,116 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e0f8d62f",
+   "metadata": {},
+   "source": [
+    "# 보류"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7ce1f61e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n, m = 4, 4\n",
+    "pos = [1, 1, 0]\n",
+    "graph = [\n",
+    "    [1, 1, 1, 1],\n",
+    "    [1, 0, 0, 1],\n",
+    "    [1, 1, 0, 1],\n",
+    "    [1, 1, 1, 1]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2526d725",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main(n, m, pos, graph):\n",
+    "    # 북, 동, 남, 서\n",
+    "    direction = [0, 1, 2, 3]\n",
+    "    root = [[-1, 0], [0, 1], [1, 0], [0, -1]]\n",
+    "    check = [[False for _ in range(m)] for _ in range(n)]\n",
+    "    result = 0\n",
+    "    \n",
+    "    for d in direction:\n",
+    "        pos[2] = direction[pos[2] - 1]\n",
+    "        pos[0] += root[pos[2]][0]\n",
+    "        pos[1] += root[pos[2]][1]\n",
+    "        print(f\"pos1 : {pos}\")\n",
+    "        \n",
+    "        if pos[0] <= 0 or pos[0] > n or pos[1] <= 0 or pos[1] > m:\n",
+    "            print(f\"out pos : {pos}\")\n",
+    "            pos[0] -= root[pos[2]][0]\n",
+    "            pos[1] -= root[pos[2]][1]\n",
+    "            continue\n",
+    "        if check[pos[0]][pos[1]] == False and graph[pos[0]][pos[1]] == 0:\n",
+    "            check[pos[0]][pos[1]] = True\n",
+    "            result += 1\n",
+    "            print(f\"if pos : {pos}\") \n",
+    "            pos[2] = direction[pos[2] + 1]\n",
+    "        else:\n",
+    "            print(f\"else pos : {pos}\")\n",
+    "            pos[0] -= root[pos[2]][0]\n",
+    "            pos[1] -= root[pos[2]][1]\n",
+    "\n",
+    "\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "98118e09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pos1 : [1, 0, 3]\n",
+      "out pos : [1, 0, 3]\n",
+      "pos1 : [2, 1, 2]\n",
+      "else pos : [2, 1, 2]\n",
+      "pos1 : [1, 2, 1]\n",
+      "if pos : [1, 2, 1]\n",
+      "pos1 : [1, 3, 1]\n",
+      "else pos : [1, 3, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = main(n, m, pos, graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a870a8e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ce1f61e",
+   "id": "57ab9ff3",
    "metadata": {},
    "outputs": [],
    "source": []
